Lab3: implement session

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,5 +13,7 @@
     <p><a href="books/bargainbooks">Bargain books</a></p>
     <p><a href="users/register">Register with us</a></p>
     <p><a href="users/loggedin">User Signin</a></p>
+    <p><a href="users/list">User list</a></p>
+    <p><a href="users/logout">Logout</a></p>
   </body>
 </html>
